[gd_scene format=3 uid="uid://c674gmugjsjp5"]

[ext_resource type="Script" uid="uid://be36o6qjrb1vf" path="res://scenes/traces/trace.gd" id="1_wap1e"]
[ext_resource type="Texture2D" uid="uid://ddyisoo214spi" path="res://scenes/traces/trace.svg" id="2_rk1p4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rk1p4"]

[sub_resource type="Animation" id="Animation_rk1p4"]
length = 0.001

[sub_resource type="Animation" id="Animation_jskje"]
resource_name = "Spin"
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5d1hf"]
_data = {
&"RESET": SubResource("Animation_rk1p4"),
&"Spin": SubResource("Animation_jskje")
}

[node name="Trace" type="Area2D" unique_id=1384073281]
visible = false
collision_layer = 4
collision_mask = 6
script = ExtResource("1_wap1e")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=2075905102]
scale = Vector2(0.34375, 0.34375)
texture = ExtResource("2_rk1p4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=944810655]
shape = SubResource("CircleShape2D_rk1p4")

[node name="Timer" type="Timer" parent="." unique_id=473437864]
wait_time = 0.1
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1453434160]
libraries/ = SubResource("AnimationLibrary_5d1hf")
autoplay = &"Spin"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
